@@ -1,3 +1,4 @@
 EBUILD cl-gnome-meta-2.28-r1.ebuild 3391 RMD160 074c9b12eafb52848d441213061bf107f5a015c6 SHA1 cf87ff0157a92e2ca3f99ba221c072609b920bb7 SHA256 a77c30521ddb575f00dc202e5388c6ed9bb66147ea9b4252b90fb285defc0c43
+EBUILD cl-gnome-meta-2.28-r2.ebuild 3440 RMD160 c99fab0e592e3911b5d2e83a1039a6265e3c3b3a SHA1 6140d5b5b4215e6fbe2368620d80daa209f447f5 SHA256 080d8bfa2405c71ae41c3fc0ecb7deca2493b652d0e41e3b6cc0045411741cc4
 EBUILD cl-gnome-meta-2.28.ebuild 3390 RMD160 3c26a90f599da7cd322010d1fa18f87973b3aefe SHA1 9a85d3ad81eae702aa202ed2eb63b3d0a0745365 SHA256 071af27e87eeba1496171d3c17bef2974f2b6af216b4bb5c17cabd355bd91fc4
-MISC ChangeLog 633 RMD160 d9ff7e2f05841d18dc355d8b1c6fc2e701b6b056 SHA1 65a47044dd4806104a7836d190f968d91f6bb434 SHA256 bd1365b3a0a14b25e0e2a10709a0ec576c3ea69878434c939d7951e5540eae63
+MISC ChangeLog 812 RMD160 eb76e08b1c2ac9e9ac665adbd463bc295d0fafd1 SHA1 06f14c5b3a4d2f781b2833e525533199c6d5a79a SHA256 20923d7cdf2fa86f7d588ed95452d47236295c3664dbd88bcf56a7d03c1c5bdc
