@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/cl-gnome-meta
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*cl-gnome-meta-2.28-r2 (14 Jan 2011)
+
+  14 Jan 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +cl-gnome-meta-2.28-r2.ebuild:
+  Add gnome-extra/sensors-applet IssueID #200.
 
 *cl-gnome-meta-2.28-r1 (08 Nov 2010)
 
